--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   iconsax: ^0.0.8
   google_nav_bar: ^5.0.6
   google_fonts: ^4.0.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
